Fix Java 9+ issues